--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: Tahoma !important;
+}
+
+.text-color-wrapper {
+  color: #667580;
+}
+
+.text-link {
+  color: #337ab7;
+}
+
+.bg-lich-thi {
+  background-color: #fff2d4;
+  color: #ff9205;
+}
+
+.bg-lich-hoc {
+  background-color: #e0fbff;
+  color: #4da1e8;
+}
